--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
     <groupId>com.tpe</groupId>
     <artifactId>SpringAnnotations</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <springframework.version>5.3.9</springframework.version>
+        <javax.annotation.api.version>1.3.2</javax.annotation.api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -21,7 +21,14 @@
             <artifactId>spring-context</artifactId>
             <version>${springframework.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${javax.annotation.api.version}</version>
+        </dependency>
     </dependencies>
+
 
 
 
